<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_white_background"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center">

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dialog_tishi"
            android:textColor="@color/theme_color"
            android:textSize="18dp" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_online"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text=""
        android:textColor="#333333"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textSize="16dp" />


    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginTop="5dp"
        android:background="#dadadd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"

            android:textColor="#999999"
            android:textSize="18dp" />

        <View
            android:layout_width="0.1dp"
            android:layout_height="wrap_content"
            android:background="#e9e9e9" />

        <TextView
            android:id="@+id/tv_quit"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_quit"
            android:textColor="@color/theme_color"
            android:textSize="18dp" />

    </LinearLayout>

</LinearLayout>
