<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">


            <TextView
                android:id="@+id/tv_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/game_cowboy_banker_order"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/game_cowboy_banker_text_size"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_type"
                style="@style/text_end10_Line1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:maxEms="6"
                android:text="@string/game_cowboy_banker_player"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/game_cowboy_banker_text_size"/>
        </RelativeLayout>

        <RelativeLayout


            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_moeny"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/game_cowboy_banker_player"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/game_cowboy_banker_text_size"/>
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="1"
        android:layout_marginLeft="3dp"
        android:text="@string/game_cowboy_banker_news"
        android:textColor="@color/colorWhite"
        android:textSize="13sp"/>
</RelativeLayout>