<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/game_cowboy_banker_lsit_bg">


    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/tv_banker_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/game_cowboy_banker_liushui"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/game_cowboy_banker_text_size"
            />

        <RelativeLayout
            android:id="@+id/rlcom_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_banker_no"
            android:layout_margin="20dp"
            android:background="@drawable/game_cowboy_benker_liushui_re_bg">

            <LinearLayout
                android:id="@+id/ll_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/game_cowboy_banker_onePoker"
                        android:textColor="@color/im_name"
                        android:textSize="@dimen/game_cowboy_banker_text_size"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/game_cowboy_banker_poker_type"
                        android:textColor="@color/im_name"
                        android:textSize="@dimen/game_cowboy_banker_text_size"/>
                </RelativeLayout>

                <RelativeLayout


                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_moeny"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/game_cowboy_banker_end"
                        android:textColor="@color/im_name"
                        android:textSize="@dimen/game_cowboy_banker_text_size"/>
                </RelativeLayout>
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_below="@id/ll_no"
                android:layout_marginTop="10dp"
                />
        </RelativeLayout>

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5.0dip"
            android:src="@drawable/game_close_ic"
            android:visibility="gone"/>

        <RelativeLayout
            android:id="@+id/rl_banker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rlcom_no"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="-15dp"
            android:background="@drawable/game_cowboy_banker_itme_bg">

            <TextView
                android:id="@+id/tv_banker_moeny"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
