<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/game_cowboy_banker_lsit_bg">


    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/tv_banker_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/game_cowboy_banker_scale"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/game_cowboy_banker_text_size"
            />

        <RelativeLayout
            android:id="@+id/rlcom_no"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_below="@id/tv_banker_no"
            android:layout_margin="10dp"
            android:background="@drawable/game_cowboy_benker_liushui_re_bg">

            <LinearLayout
                android:id="@+id/ll_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/game_cowboy_banker_tian"
                        android:textColor="@color/im_name"
                        android:textSize="@dimen/game_cowboy_banker_text_size"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/game_cowboy_banker_di"
                        android:textColor="@color/im_name"
                        android:textSize="@dimen/game_cowboy_banker_text_size"/>
                </RelativeLayout>

                <RelativeLayout


                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_moeny"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/game_cowboy_banker_ren"
                        android:textColor="@color/im_name"
                        android:textSize="@dimen/game_cowboy_banker_text_size"/>
                </RelativeLayout>
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_below="@id/ll_no"
                android:layout_marginTop="10dp"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/tv_scale_tian"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_game_bowboy_banker_history_scale"
                            android:paddingBottom="5dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:paddingTop="5dp"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/game_cowboy_banker_text_size"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/tv_scale_di"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"

                            android:background="@drawable/bg_game_bowboy_banker_history_scale"
                            android:paddingBottom="5dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:paddingTop="5dp"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/game_cowboy_banker_text_size"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/tv_scale_ren"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:background="@drawable/bg_game_bowboy_banker_history_scale"
                            android:paddingBottom="5dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:paddingTop="5dp"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/game_cowboy_banker_text_size"/>
                    </RelativeLayout>
                </LinearLayout>

            </RelativeLayout>

            <ImageView
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5.0dip"
                android:src="@drawable/game_close_ic"
                android:visibility="gone"/>

        </RelativeLayout>


    </RelativeLayout>
</RelativeLayout>
